@@ -1,3 +1,11 @@
+2004-10-31  Mark Kettenis  <kettenis@gnu.org>
+
+	* i386v4-nat.c (supply_gregset, supply_fpregset, fill_gregset)
+	(fill_fpregset): Do not compile for 64-bit systems.
+	* i386-sol2-nat.c: Don't include "i386v4-nat.c".
+	* Makefile.in (i386-sol2-nat.o): Update dependencies.
+	* config/i386/i386sol2.mh (NATDEPFILES): Add back i386v4-nat.c.
+
 2004-10-30  Andrew Cagney  <cagney@gnu.org>
 
 	* mdebugread.h: Include "coff/sym.h" and "coff/symconst.h".
